--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "pinia": "^2.1.7",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "~5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
