--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-service": "~5.0.0",
     "core-js": "^3.8.3",
     "pinia": "^2.1.7",
     "vue": "^3.2.13",
-    "vue-router": "^4.2.5",
-    "@vue/cli-service": "~5.0.0"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
